add multiple sections

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,5 +17,19 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial Unicode MS, Arial, Helvetica, sans-serif;
+}
+
+.pom-pattern {
+  background-image: url("/img/pom.webp");
+  background-size: 200px 150px;
+  opacity: 0.1;
+  background-repeat: space repeat;
+}
+
+.pom-pizza {
+  background-image: url("/img/pizza.webp");
+  background-size: 1170px 810px;
+  background-repeat: no-repeat;
+  background-position: center;
 }
