--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,8 +27,8 @@ body {
   background-repeat: space repeat;
 }
 
-.pom-pizza {
-  background-image: url("/img/pizza.webp");
+.pom-crust {
+  background-image: url("/img/crust.webp");
   background-size: 1170px 810px;
   background-repeat: no-repeat;
   background-position: center;
